--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -10,6 +10,7 @@ body {
   /*text-align: center;*/
   color: #333;
   font-size: 14px;
+  font:  Helvetica,Tahoma,Arial,"Hiragino Sans GB","Microsoft YaHei",SimSun,Heiti,sans-serif;
 }
 
 li {
