--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -7,7 +7,8 @@
 }
 .fr {
   float: right;
-}.common-header {
+}
+.common-header {
   width: 100%;
 }
 .common-header .header-container {
@@ -129,6 +130,7 @@
   height: 75px;
 }
 .common-header .header-container .top-nav .person-information .unloaded-nav .mini-cart .exist-cart .cart-payment .cart-left {
+  display: none;
   float: left;
   width: 120px;
   color: #757575;
@@ -147,7 +149,7 @@
 .common-header .header-container .top-nav .person-information .unloaded-nav .mini-cart .exist-cart .cart-payment .cart-right {
   float: right;
   top: 20px;
-  right: 30px;
+  right: 85px;
   position: relative;
   height: 30px;
   line-height: 30px;
@@ -158,7 +160,7 @@
   background: #E02B41;
   width: 80px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 .common-header .header-container .top-nav .person-information .unloaded-nav .mini-cart .exist-cart .cart-payment .cart-right .right-cart .btn-cart {
   color: #F5F5F5;
@@ -270,6 +272,7 @@
   height: 75px;
 }
 .common-header .header-container .top-nav .person-information .loaded-nav .mini-cart .exist-cart .cart-payment .cart-left {
+  display: none;
   float: left;
   width: 120px;
   color: #757575;
@@ -288,9 +291,9 @@
 .common-header .header-container .top-nav .person-information .loaded-nav .mini-cart .exist-cart .cart-payment .cart-right {
   float: right;
   top: 20px;
-  right: 30px;
+  right: 85px;
   position: relative;
-  height: 30px;
+  height: 85px;
   line-height: 30px;
   text-align: center;
   color: #F5F5F5;
@@ -299,7 +302,7 @@
   background: #E02B41;
   width: 80px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 .common-header .header-container .top-nav .person-information .loaded-nav .mini-cart .exist-cart .cart-payment .cart-right .right-cart .btn-cart {
   color: #F5F5F5;
