--- a/src/assets/styles/getOrderInfo.css
+++ b/src/assets/styles/getOrderInfo.css
@@ -830,7 +830,7 @@
 
     margin: 12% auto;
 
-    overflow: auto;
+    /* overflow: auto; */
 
     position: relative;
 
@@ -861,7 +861,7 @@
 
     position: relative;
 
-    top: -48px;
+    top: -58px;
 
     color: #aaa;
 }
@@ -906,7 +906,7 @@
 
     outline: none;
 
-    width:285px;
+    width:270px;
 
     height:40px;
 
@@ -946,7 +946,7 @@
 
     outline: none;
 
-    width:310px;
+    width:315px;
 
     height:40px;
 
@@ -1022,7 +1022,7 @@
 
     margin-left: 13px;
 
-    font-size: 15px;
+    font-size: 14px;
 
     color:#aaa;
 
