--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -7,7 +7,11 @@
 }
 .fr {
   float: right;
-}.common-header {
+}
+.clearfix {
+  clear:both;
+}
+.common-header {
   width: 100%;
 }
 .common-header .header-container {
